--- a/member.html
+++ b/member.html
@@ -42,7 +42,10 @@
       <div class="col harf">
         <h2>Research Student</h2>
         <img src="images/icon_wakaba.jpg" alt="わかば">
-        <p>新入生。webデザイナーになるのが夢。</p>
+        <p>
+          新入生。webデザイナーになるのが夢。
+        </p>
+        <p>プロフィール追加2回目</p>
       </div>
     </div>
 
